<resources>
    <string name="app_name">Home Accessibility</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="s">Start</string>
    <string name="l">Lights</string>
    <string name="c">Camera</string>
    <string name="d">Doors</string>
    <string name="gl">Get Light Status</string>
    <string name="lon">Light On</string>
    <string name="lof">Light Off</string>
    <string name="gd">Get Door Status</string>
    <string name="od1">Toggle Door 1</string>
    <string name="od2">Toggle Door 2</string>
    <string name="od3">Toggle Door 3</string>
    <string name="q">Quit</string>
    <string name="b">Back</string>
    <string name="la">Look At Camera</string>
    <string name="o">Open\n Garage</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Networking settings -->
    <string name="pref_header_network">Networking</string>

    <string name="pref_title_hub_connection">Hub connection</string>
    <string name="pref_description_hub_connection">
        Controls how messages are sent to the hub over the network.
    </string>

    <string name="pref_title_hub_IP_address">Hub IP Address</string>
    <string name="pref_description_hub_IP_address">
        The IP address used to send messages to the Home Accessibility hub.
    </string>

    <string name="pref_title_hub_IP_port">Hub IP Port</string>
    <string name="pref_description_hub_IP_port">
        The IP port used to send messages to the Home Accessibility hub.
    </string>

</resources>
