<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFF00">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l"
        android:id="@+id/button2"
        android:background="#FF0000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/button3"
        android:background="#FF0000"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:id="@+id/button4"
        android:background="#FF0000"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/button17"
        android:layout_alignLeft="@+id/button17"
        android:layout_alignStart="@+id/button17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button17"
        android:text="@string/b"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#FF0000" />
</RelativeLayout>