<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" tools:context=".MainActivity"
    android:background="#000000">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/textView"
        android:background="@drawable/picture1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:text="@string/s"
        android:id="@+id/startButton"
        android:background="#ffd180"
        android:layout_above="@+id/viEw1"
    <View
        android:layout_alignLeft="@+id/quitButton"
        android:layout_alignStart="@+id/quitButton"
        android:layout_above="@+id/settingsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settingsButton"
        android:background="#ffd180"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/quitButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q"
        android:id="@+id/quitButton"
        android:background="#ffd180"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp" />

</RelativeLayout>
